--- a/resources/assets/scss/base.scss
+++ b/resources/assets/scss/base.scss
@@ -74,9 +74,12 @@ html {
   font-family: theme('fontFamily.source-sans');
   // Resetting to a base 16px font-size; works better with default Tailwind.
   font-size: 16px;
-  height: 100%;
   line-height: 1.4;
   width: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 body {
