--- a/resources/assets/scss/base.scss
+++ b/resources/assets/scss/base.scss
@@ -16,6 +16,11 @@ $forge-path: '../../../node_modules/@dosomething/forge/assets/';
 */
 
 // @TODO:forge-removal Rename this class to "button".
+a > *,
+.btn > * {
+  pointer-events: none;
+}
+
 .btn {
   @apply cursor-pointer font-bold font-source-sans inline-block no-underline py-3 px-4 rounded text-base text-center text-white outline-none;
 }
