--- a/resources/assets/scss/base.scss
+++ b/resources/assets/scss/base.scss
@@ -15,6 +15,9 @@ $forge-path: '../../../node_modules/@dosomething/forge/assets/';
 | everything together. We're getting there!
 */
 
+// Ensures that pointer events on elements inside of links do not trigger
+// click events, only the surrounding <a> link triggers a click event.
+// @see https://css-tricks.com/slightly-careful-sub-elements-clickable-things/
 a > * {
   pointer-events: none;
 }
