Update to enable tracking link clicks on images as well. (#2065)
* Update to enable tracking link clicks on images as well.

* Using simpler global CSS approach.

* We don't need it on .btn class, since already using it on <a> and not necessary for <button>.

* Adding comments.

--- a/resources/assets/scss/base.scss
+++ b/resources/assets/scss/base.scss
@@ -15,6 +15,13 @@ $forge-path: '../../../node_modules/@dosomething/forge/assets/';
 | everything together. We're getting there!
 */
 
+// Ensures that pointer events on elements inside of links do not trigger
+// click events, only the surrounding <a> link triggers a click event.
+// @see https://css-tricks.com/slightly-careful-sub-elements-clickable-things/
+a > * {
+  pointer-events: none;
+}
+
 // @TODO:forge-removal Rename this class to "button".
 .btn {
   @apply cursor-pointer font-bold font-source-sans inline-block no-underline py-3 px-4 rounded text-base text-center text-white outline-none;
