--- a/resources/assets/components/utilities/TextContent/markdown.scss
+++ b/resources/assets/components/utilities/TextContent/markdown.scss
@@ -133,6 +133,19 @@
     margin: 60px auto;
     width: 33.333333333%;
   }
+
+  details {
+    @apply pb-3;
+  }
+
+  details > *:not(summary) {
+    @apply pt-5;
+  }
+
+  summary {
+    @apply font-bold;
+    font-size: inherit;
+  }
 }
 
 .footnotes {
