--- a/resources/assets/components/utilities/TextContent/markdown.scss
+++ b/resources/assets/components/utilities/TextContent/markdown.scss
@@ -135,16 +135,17 @@
   }
 
   details {
-    @apply pb-3;
+    @apply pb-4;
   }
 
   details > *:not(summary) {
-    @apply pt-5;
+    @apply pt-2;
   }
 
   summary {
     @apply font-bold;
-    font-size: inherit;
+    @apply text-base;
+    cursor: pointer;
   }
 }
 
