--- a/resources/assets/components/utilities/ShortLinkShare/short-link-share.scss
+++ b/resources/assets/components/utilities/ShortLinkShare/short-link-share.scss
@@ -1,6 +1,6 @@
 @import '../../../scss/next-toolbox.scss';
 
-.social-drive-action {
+.short-link-share {
     .link-area {
         @include media($large) {
             display: flex;
