--- a/resources/assets/components/pages/AccountPage/VoterReg/voter-reg.scss
+++ b/resources/assets/components/pages/AccountPage/VoterReg/voter-reg.scss
@@ -1,28 +1,14 @@
 .voter-reg {
-  background: #fff;
-  padding: 12px;
-  border-radius: 4px;
-  height: 55px;
-  width: 460px;
-  border: 1px solid;
-  &.-red {
-    border-color: #ff4747;
-  }
-  &.-green {
-    border-color: #80de19;
-  }
-  &.-yellow {
-    border-color: theme('colors.yellow.500');
-  }
+    background: #fff;
+    border-radius: 4px;
+    border: 1px solid theme('colors.gray.400');
+    &.-green {
+        border-color: #80de19;
+    }
 }
 .icon {
-  &.-x,
-  &.-clock {
-    height: 25px;
-    width: 25px;
-  }
-  &.-check {
-    height: 22.22;
-    width: 29.75;
-  }
+    &.-check {
+        height: 22.22;
+        width: 29.75;
+    }
 }
