updates imports in email form

--- a/resources/assets/components/utilities/PopoverDispatcher/CtaPopover/cta-popover.scss
+++ b/resources/assets/components/utilities/PopoverDispatcher/CtaPopover/cta-popover.scss
@@ -1,4 +1,4 @@
-@import '../../../scss/next-toolbox';
+@import '../../../../scss/next-toolbox.scss';
 
 .cta-popover {
     background: url('./cta-popover-bg.svg');
