--- a/resources/assets/scss/base.scss
+++ b/resources/assets/scss/base.scss
@@ -19,91 +19,100 @@ $forge-path: '../../../node_modules/@dosomething/forge/assets/';
 // click events, only the surrounding <a> link triggers a click event.
 // @see https://css-tricks.com/slightly-careful-sub-elements-clickable-things/
 a > * {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 // @TODO:forge-removal Rename this class to "button".
 .btn {
-  @apply cursor-pointer font-bold font-source-sans inline-block no-underline py-3 px-4 rounded text-base text-center text-white outline-none;
+    @apply cursor-pointer font-bold font-source-sans inline-block no-underline py-3 px-4 rounded text-base text-center text-white outline-none;
 }
 
 .btn:active {
-  @apply text-white;
+    @apply text-white;
 }
 
 .btn:hover {
-  @apply cursor-pointer text-white no-underline;
+    @apply cursor-pointer text-white no-underline;
 }
 
 .btn:disabled {
-  @apply cursor-not-allowed;
-  background-color: theme('colors.gray.500') !important;
-  border-color: transparent !important;
-  color: theme('colors.gray.100') !important;
+    @apply cursor-not-allowed;
+    background-color: theme('colors.gray.500') !important;
+    border-color: transparent !important;
+    color: theme('colors.gray.100') !important;
 }
 
 .btn.is-loading:disabled {
-  @apply cursor-wait;
+    @apply cursor-wait;
 }
 
 // @TODO: remove ".button" rules once all buttons in Phoenix have switched to the new button components.
 .button {
-  background: theme('colors.blurple.500');
+    background: theme('colors.blurple.500');
 }
 
 .button:active {
-  background: theme('colors.blurple.700');
+    background: theme('colors.blurple.700');
 }
 
 .button:focus {
-  background: theme('colors.blurple.400');
+    background: theme('colors.blurple.400');
 }
 
 .button:hover {
-  background: theme('colors.blurple.400');
+    background: theme('colors.blurple.400');
 }
 
+// Updated baseline styling for links
+p > a {
+    @apply font-normal underline text-blurple-500;
+
+    &:hover {
+        @apply text-blurple-400;
+        text-decoration-color: theme('colors.teal.500');
+    }
+}
 // @TODO:forge-removal Rename this class to "text-field".
 .text-input {
-  @apply bg-white p-3 border border-gray-200 border-solid font-source-sans rounded;
+    @apply bg-white p-3 border border-gray-200 border-solid font-source-sans rounded;
 }
 
 .text-input:focus {
-  @apply outline-none border border-solid border-blue-500;
-  box-shadow: 0 0 3px theme('colors.blue.500');
+    @apply outline-none border border-solid border-blue-500;
+    box-shadow: 0 0 3px theme('colors.blue.500');
 }
 
 // Helper class to style 'button' elements as links:
 .link-button {
-  @apply inline bg-transparent border-none cursor-pointer text-blue-500 underline m-0 p-0;
+    @apply inline bg-transparent border-none cursor-pointer text-blue-500 underline m-0 p-0;
 }
 
 .link-button:hover,
 .link-button:focus {
-  @apply text-blue-300;
+    @apply text-blue-300;
 }
 
 // Helper class to keep border from collapsing:
 .border-no-clip {
-  background-clip: padding-box;
+    background-clip: padding-box;
 }
 
 @tailwind utilities;
 
 .focus\:outline-blurple-100:focus {
-  outline-color: theme('colors.blurple.100');
+    outline-color: theme('colors.blurple.100');
 }
 
 .focus\:outline-solid:focus {
-  outline-style: solid;
+    outline-style: solid;
 }
 
 .focus\:outline-2:focus {
-  outline-width: 2px;
+    outline-width: 2px;
 }
 
 .focus\:rounded-none:focus {
-  border-radius: 0;
+    border-radius: 0;
 }
 
 /*
@@ -121,124 +130,124 @@ a > * {
 
 body,
 html {
-  font-family: theme('fontFamily.source-sans');
-  // Resetting to a base 16px font-size; works better with default Tailwind.
-  font-size: 16px;
-  line-height: 1.4;
-  width: 100%;
+    font-family: theme('fontFamily.source-sans');
+    // Resetting to a base 16px font-size; works better with default Tailwind.
+    font-size: 16px;
+    line-height: 1.4;
+    width: 100%;
 }
 
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  @apply bg-gray-300 text-gray-900;
+    @apply bg-gray-300 text-gray-900;
 }
 
 .app {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: auto 1fr auto;
-  max-width: 1440px;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 1fr auto;
+    max-width: 1440px;
 }
 
 // Reset browser defaults so this behaves like <a>
 // or <input type="button"> elements do.
 button {
-  font-family: theme('fontFamily.source-sans');
-  background: transparent;
-  border: none;
+    font-family: theme('fontFamily.source-sans');
+    background: transparent;
+    border: none;
 }
 
 .button {
-  &:focus {
-    border: none;
-    box-shadow: 0 0 3px $blue, inset 0 0 1px rgba(0, 0, 0, 0.4);
-  }
+    &:focus {
+        border: none;
+        box-shadow: 0 0 3px $blue, inset 0 0 1px rgba(0, 0, 0, 0.4);
+    }
 }
 
 h1,
 h2,
 h3,
 p {
-  color: theme('colors.gray.900');
+    color: theme('colors.gray.900');
 }
 
 .inverted {
-  h1,
-  h2,
-  h3,
-  p {
-    color: $white;
-  }
+    h1,
+    h2,
+    h3,
+    p {
+        color: $white;
+    }
 }
 
 // @TODO: for cleanup. Adding to base for now since needed
 // for validation in all forms.
 .field-label {
-  &.has-error {
-    color: $error-color;
-  }
+    &.has-error {
+        color: $error-color;
+    }
 }
 
 // Override Forge rule for .text-field font-family (https://git.io/fjeFh).
 .text-field {
-  font-family: theme('fontFamily.source-sans');
-  border-color: theme('colors.gray.400');
+    font-family: theme('fontFamily.source-sans');
+    border-color: theme('colors.gray.400');
 }
 
 .text-field:disabled {
-  border-color: theme('colors.gray.400');
-  background-color: theme('colors.gray.100');
-  color: theme('colors.gray.500');
+    border-color: theme('colors.gray.400');
+    background-color: theme('colors.gray.100');
+    color: theme('colors.gray.500');
 }
 
 // Utility classes.
 .color-white {
-  color: $white !important;
+    color: $white !important;
 }
 
 .color-gray {
-  color: theme('colors.gray.600') !important;
+    color: theme('colors.gray.600') !important;
 }
 
 .color-yellow {
-  color: theme('colors.yellow.500') !important;
+    color: theme('colors.yellow.500') !important;
 }
 
 .color-error {
-  color: $error-color !important;
+    color: $error-color !important;
 }
 
 .color-success {
-  color: theme('colors.green.700') !important;
+    color: theme('colors.green.700') !important;
 }
 
 // @TODO:phoenix-css-heirarchy-issue with bg-color on Card component.
 // Delete once remedied!
 .bg-black-important {
-  background-color: theme('colors.gray.900') !important;
+    background-color: theme('colors.gray.900') !important;
 }
 
 // @TODO:phoenix-css-heirarchy-issue with bg-color on Card component.
 // Delete once remedied!
 .bg-gray-100-important {
-  background-color: theme('colors.gray.100') !important;
+    background-color: theme('colors.gray.100') !important;
 }
 
 .bordered {
-  border: 1px solid theme('colors.transparent-black.10');
-  background-clip: padding-box;
+    border: 1px solid theme('colors.transparent-black.10');
+    background-clip: padding-box;
 }
 
 // @TODO:forge-removal Use class utilities to style footer.
 .footer a {
-  @apply text-gray-500;
+    @apply text-gray-500;
 }
 
 .word-break {
-  word-break: break-word; // CSS deprecated; find alternative.
+    word-break: break-word; // CSS deprecated; find alternative.
 }
 
 /*
@@ -261,156 +270,156 @@ p {
 */
 
 .base-12-grid {
-  display: grid;
+    display: grid;
 
-  // 4 columns
-  grid-template-columns: [full-start] 1fr 1fr [midway] 1fr 1fr [full-end];
-  grid-column-gap: theme('spacing.3');
-  padding-left: theme('spacing.3');
-  padding-right: theme('spacing.3');
+    // 4 columns
+    grid-template-columns: [full-start] 1fr 1fr [midway] 1fr 1fr [full-end];
+    grid-column-gap: theme('spacing.3');
+    padding-left: theme('spacing.3');
+    padding-right: theme('spacing.3');
 
-  @include media($medium) {
-    // 8 columns
-    grid-template-columns: [full-start] 1fr [main-start] 1fr 1fr 1fr [midway] 1fr 1fr 1fr [main-end] 1fr [full-end];
-    grid-column-gap: theme('spacing.6');
-    padding-left: theme('spacing.12');
-    padding-right: theme('spacing.12');
-  }
+    @include media($medium) {
+        // 8 columns
+        grid-template-columns: [full-start] 1fr [main-start] 1fr 1fr 1fr [midway] 1fr 1fr 1fr [main-end] 1fr [full-end];
+        grid-column-gap: theme('spacing.6');
+        padding-left: theme('spacing.12');
+        padding-right: theme('spacing.12');
+    }
 
-  @include media($large) {
-    // 12 columns
-    grid-template-columns: [full-start] 1fr [wide-start] 1fr [main-start] 1fr [narrow-start] 1fr 1fr 1fr [midway] 1fr 1fr 1fr [narrow-end] 1fr [main-end] 1fr [wide-end] 1fr [full-end];
-  }
+    @include media($large) {
+        // 12 columns
+        grid-template-columns: [full-start] 1fr [wide-start] 1fr [main-start] 1fr [narrow-start] 1fr 1fr 1fr [midway] 1fr 1fr 1fr [narrow-end] 1fr [main-end] 1fr [wide-end] 1fr [full-end];
+    }
 }
 
 .grid-full {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 }
 
 .grid-compact {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: main-start / main-end;
-  }
+    @include media($medium) {
+        grid-column: main-start / main-end;
+    }
 
-  @include media($large) {
-    grid-column: compact-start / compact-end;
-  }
+    @include media($large) {
+        grid-column: compact-start / compact-end;
+    }
 }
 
 .grid-main {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: main-start / main-end;
-  }
+    @include media($medium) {
+        grid-column: main-start / main-end;
+    }
 
-  @include media($large) {
-    grid-column: main-start / main-end;
-  }
+    @include media($large) {
+        grid-column: main-start / main-end;
+    }
 }
 
 .grid-narrow {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: main-start / main-end;
-  }
+    @include media($medium) {
+        grid-column: main-start / main-end;
+    }
 
-  @include media($largest) {
-    grid-column: narrow-start / narrow-end;
-  }
+    @include media($largest) {
+        grid-column: narrow-start / narrow-end;
+    }
 }
 
 .grid-wide {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($large) {
-    grid-column: wide-start / wide-end;
-  }
+    @include media($large) {
+        grid-column: wide-start / wide-end;
+    }
 }
 
 .grid-full-1\/2 {
-  grid-column: auto / span 4;
-
-  @include media($medium) {
     grid-column: auto / span 4;
-  }
 
-  @include media($large) {
-    grid-column: auto / span 6;
-  }
+    @include media($medium) {
+        grid-column: auto / span 4;
+    }
+
+    @include media($large) {
+        grid-column: auto / span 6;
+    }
 }
 
 .grid-full-8\/12 {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($large) {
-    grid-column: full-start / span 8;
-  }
+    @include media($large) {
+        grid-column: full-start / span 8;
+    }
 }
 
 .grid-wide-1\/3 {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: midway / full-end;
-  }
+    @include media($medium) {
+        grid-column: midway / full-end;
+    }
 
-  @include media($large) {
-    grid-column: 8 / span 4;
-  }
+    @include media($large) {
+        grid-column: 8 / span 4;
+    }
 }
 
 .grid-wide-2\/3 {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: full-start / midway;
-  }
+    @include media($medium) {
+        grid-column: full-start / midway;
+    }
 
-  @include media($large) {
-    grid-column: wide-start / span 6;
-  }
+    @include media($large) {
+        grid-column: wide-start / span 6;
+    }
 }
 
 .grid-wide-3\/10 {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: midway / full-end;
-  }
+    @include media($medium) {
+        grid-column: midway / full-end;
+    }
 
-  @include media($large) {
-    grid-column: midway / wide-end;
-  }
+    @include media($large) {
+        grid-column: midway / wide-end;
+    }
 
-  @include media($larger) {
-    grid-column: 8 / span 4;
-  }
+    @include media($larger) {
+        grid-column: 8 / span 4;
+    }
 
-  @include media($largest) {
-    grid-column: 9 / span 3;
-  }
+    @include media($largest) {
+        grid-column: 9 / span 3;
+    }
 }
 
 .grid-wide-7\/10 {
-  grid-column: full-start / full-end;
+    grid-column: full-start / full-end;
 
-  @include media($medium) {
-    grid-column: full-start / midway;
-  }
+    @include media($medium) {
+        grid-column: full-start / midway;
+    }
 
-  @include media($large) {
-    grid-column: wide-start / midway;
-  }
+    @include media($large) {
+        grid-column: wide-start / midway;
+    }
 
-  @include media($larger) {
-    grid-column: wide-start / span 6;
-  }
+    @include media($larger) {
+        grid-column: wide-start / span 6;
+    }
 
-  @include media($largest) {
-    grid-column: wide-start / span 7;
-  }
+    @include media($largest) {
+        grid-column: wide-start / span 7;
+    }
 }
