updates main nav feature link styling

--- a/resources/assets/components/SiteNavigation/site-navigation.scss
+++ b/resources/assets/components/SiteNavigation/site-navigation.scss
@@ -246,6 +246,7 @@ $extraSmall: '(min-width: 360px)';
 .main-subnav__feature {
     display: block;
     font-weight: $weight-normal;
+    text-decoration: none;
 
     &:active,
     &:hover {
