--- a/resources/assets/components/utilities/PageNavigation/page-navigation.scss
+++ b/resources/assets/components/utilities/PageNavigation/page-navigation.scss
@@ -5,77 +5,79 @@
 $light-background-color: #f7fafc; // theme('colors.gray.100')
 
 .page-navigation {
-  position: relative;
-  background-color: $white;
-  border-top: solid 1px theme('colors.gray.300');
-  border-bottom: solid 1px theme('colors.gray.300');
-
-  @include media($tablet) {
-    position: sticky;
-    top: 0;
-    z-index: $tabbed-navigation-zindex;
-  }
-
-  &.-no-fade {
-    &::before {
-      display: none;
-    }
-  }
-
-  &::before {
-    content: '';
-    background: linear-gradient(
-      to right,
-      rgba($light-background-color, 0) 0%,
-      rgba($light-background-color, 1) 75%
-    );
-    height: 100%;
-    display: block;
-    pointer-events: none;
-    position: absolute;
-    right: 0;
-    width: 35px;
-    z-index: 10;
+    position: relative;
+    background-color: $white;
+    border-top: solid 1px theme('colors.gray.300');
+    border-bottom: solid 1px theme('colors.gray.300');
 
     @include media($tablet) {
-      display: none;
-    }
-  }
-
-  .nav-items {
-    float: left;
-    overflow-x: auto;
-    overflow-y: hidden;
-    position: relative;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-  }
-
-  .nav-link {
-    color: theme('colors.gray.600');
-    display: inline-block;
-    margin: 0px theme('spacing.3');
-    text-transform: uppercase;
-    border-bottom: 4px solid transparent;
-
-    &:hover {
-      color: theme('colors.blurple.300');
-      text-decoration: none;
-      border-bottom: 4px solid theme('colors.blurple.300');
+        position: sticky;
+        top: 0;
+        z-index: $tabbed-navigation-zindex;
     }
 
-    &.is-active {
-      color: theme('colors.blurple.500');
-      border-bottom: 4px solid theme('colors.blurple.500');
+    &.-no-fade {
+        &::before {
+            display: none;
+        }
     }
-  }
 
-  &.is-stuck {
-    @media (min-width: 900px) {
-      .nav-button {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    &::before {
+        content: '';
+        background: linear-gradient(
+            to right,
+            rgba($light-background-color, 0) 0%,
+            rgba($light-background-color, 1) 75%
+        );
+        height: 100%;
+        display: block;
+        pointer-events: none;
+        position: absolute;
+        right: 0;
+        width: 35px;
+        z-index: 10;
+
+        @include media($tablet) {
+            display: none;
+        }
     }
-  }
+
+    .nav-items {
+        float: left;
+        overflow-x: auto;
+        overflow-y: hidden;
+        position: relative;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+    }
+
+    .nav-link {
+        color: theme('colors.gray.600');
+        display: inline-block;
+        margin: 0px theme('spacing.3');
+        text-transform: uppercase;
+        text-decoration: none;
+        font-weight: bold;
+        border-bottom: 4px solid transparent;
+
+        &:hover {
+            color: theme('colors.blurple.300');
+            text-decoration: none;
+            border-bottom: 4px solid theme('colors.blurple.300');
+        }
+
+        &.is-active {
+            color: theme('colors.blurple.500');
+            border-bottom: 4px solid theme('colors.blurple.500');
+        }
+    }
+
+    &.is-stuck {
+        @media (min-width: 900px) {
+            .nav-button {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    }
 }
