--- a/resources/assets/components/utilities/SiteFooter/site-footer.scss
+++ b/resources/assets/components/utilities/SiteFooter/site-footer.scss
@@ -4,5 +4,9 @@
     a {
         font-weight: bold;
         text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
