Text Link style sitewide updates (#2562)
* adds new text link styling to base scss file

* updates cards to have specific styling and site nav links

* footer text link updates

* updates main nav feature link styling

* updates homepage newsletter link styles

* removes footer css file and adds TW

--- a/resources/assets/components/SiteNavigation/site-navigation.scss
+++ b/resources/assets/components/SiteNavigation/site-navigation.scss
@@ -103,6 +103,11 @@ $extraSmall: '(min-width: 360px)';
         display: block;
         font-weight: $weight-normal;
         padding: 8px 0;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
 
         @include media($large) {
             padding: 6px 0;
@@ -241,6 +246,7 @@ $extraSmall: '(min-width: 360px)';
 .main-subnav__feature {
     display: block;
     font-weight: $weight-normal;
+    text-decoration: none;
 
     &:active,
     &:hover {
