--- a/resources/assets/components/utilities/TextContent/markdown.scss
+++ b/resources/assets/components/utilities/TextContent/markdown.scss
@@ -56,7 +56,7 @@
             left: 0;
             top: -1%;
             width: 4px;
-            background: theme('colors.yellow.500');
+            background: theme('colors.teal.500');
             position: absolute;
         }
     }
