--- a/resources/assets/components/SiteNavigation/site-navigation.scss
+++ b/resources/assets/components/SiteNavigation/site-navigation.scss
@@ -354,7 +354,7 @@ $extraSmall: '(min-width: 360px)';
     padding: 12px $spacing_1x 12px;
 
     @include media($large) {
-        padding: 12px $spacing_1x 14px;
+        padding: 12px 3px 14px $spacing_1x;
     }
 
     > img {
