Add dropdown menu for unauthenticated login in site nav

--- a/resources/assets/components/SiteNavigation/site-navigation.scss
+++ b/resources/assets/components/SiteNavigation/site-navigation.scss
@@ -332,6 +332,10 @@ $extraSmall: '(min-width: 360px)';
 
     > a {
         padding: $spacing_1x;
+
+        @include media($large) {
+            padding-right: 3px;
+        }
     }
 }
 
